// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`recipe: Button > emits the expected shortcut tuples 1`] = `
[
  [
    "btn",
    "inline-flex items-center justify-center rounded-md font-medium border transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 focus-visible:ring-[var(--btn-focus-ring,theme(colors.gray.500))] disabled:opacity-50 disabled:cursor-not-allowed",
  ],
  [
    "btn-c-primary",
    "[--btn-bg:theme(colors.blue.600)] [--btn-bg-hover:theme(colors.blue.700)] [--btn-text:theme(colors.blue.700)] [--btn-border:theme(colors.blue.300)] [--btn-bg-subtle:theme(colors.blue.50)] [--btn-bg-muted:theme(colors.blue.100)] [--btn-focus-ring:theme(colors.blue.500)]",
  ],
  [
    "btn-c-success",
    "[--btn-bg:theme(colors.emerald.600)] [--btn-bg-hover:theme(colors.emerald.700)] [--btn-text:theme(colors.emerald.700)] [--btn-border:theme(colors.emerald.300)] [--btn-bg-subtle:theme(colors.emerald.50)] [--btn-bg-muted:theme(colors.emerald.100)] [--btn-focus-ring:theme(colors.emerald.500)]",
  ],
  [
    "btn-c-danger",
    "[--btn-bg:theme(colors.red.600)] [--btn-bg-hover:theme(colors.red.700)] [--btn-text:theme(colors.red.700)] [--btn-border:theme(colors.red.300)] [--btn-bg-subtle:theme(colors.red.50)] [--btn-bg-muted:theme(colors.red.100)] [--btn-focus-ring:theme(colors.red.500)]",
  ],
  [
    "btn-c-warning",
    "[--btn-bg:theme(colors.amber.600)] [--btn-bg-hover:theme(colors.amber.700)] [--btn-text:theme(colors.amber.700)] [--btn-border:theme(colors.amber.300)] [--btn-bg-subtle:theme(colors.amber.50)] [--btn-bg-muted:theme(colors.amber.100)] [--btn-focus-ring:theme(colors.amber.500)]",
  ],
  [
    "btn-c-info",
    "[--btn-bg:theme(colors.sky.600)] [--btn-bg-hover:theme(colors.sky.700)] [--btn-text:theme(colors.sky.700)] [--btn-border:theme(colors.sky.300)] [--btn-bg-subtle:theme(colors.sky.50)] [--btn-bg-muted:theme(colors.sky.100)] [--btn-focus-ring:theme(colors.sky.500)]",
  ],
  [
    "btn-c-neutral",
    "[--btn-bg:theme(colors.gray.600)] [--btn-bg-hover:theme(colors.gray.700)] [--btn-text:theme(colors.gray.700)] [--btn-border:theme(colors.gray.300)] [--btn-bg-subtle:theme(colors.gray.50)] [--btn-bg-muted:theme(colors.gray.100)] [--btn-focus-ring:theme(colors.gray.500)]",
  ],
  [
    "btn-style-solid",
    "bg-[var(--btn-bg)] text-white border-[var(--btn-bg)] hover:bg-[var(--btn-bg-hover)] hover:border-[var(--btn-bg-hover)]",
  ],
  [
    "btn-style-outline",
    "bg-transparent text-[var(--btn-text)] border-[var(--btn-border)] hover:bg-[var(--btn-bg-subtle)]",
  ],
  [
    "btn-style-subtle",
    "bg-[var(--btn-bg-subtle)] text-[var(--btn-text)] border-transparent hover:bg-[var(--btn-bg-muted)]",
  ],
  [
    "btn-style-ghost",
    "bg-transparent text-[var(--btn-text)] border-transparent hover:bg-[var(--btn-bg-subtle)]",
  ],
  [
    "btn-s-sm",
    "px-2.5 py-1 text-sm",
  ],
  [
    "btn-s-md",
    "px-4 py-2 text-base",
  ],
  [
    "btn-s-lg",
    "px-6 py-3 text-lg",
  ],
]
`;

exports[`recipe: Button > exposes every expected class name in the manifest 1`] = `
[
  "btn",
  "btn-c-primary",
  "btn-c-success",
  "btn-c-danger",
  "btn-c-warning",
  "btn-c-info",
  "btn-c-neutral",
  "btn-style-solid",
  "btn-style-outline",
  "btn-style-subtle",
  "btn-style-ghost",
  "btn-s-sm",
  "btn-s-md",
  "btn-s-lg",
]
`;
